--- a/Day8-FormWave/index.html
+++ b/Day8-FormWave/index.html
@@ -9,18 +9,22 @@
 <body>
     
     <div class="container">
-        <h1>Login</h1>
+        <h1>Get in touch</h1>
         <form>
             <div class="form-control">
                 <input type="text" required>
-                <label>Email</label>
+                <label>Name</label>
             </div>
             <div class="form-control">
                 <input type="password" required>
-                <label>Password</label>
+                <label>Email</label>
+            </div>
+            <div class="form-control">
+                <textarea name="Message" id="message" cols="30" rows="10"></textarea>
+                <label>Message</label>
             </div>
 
-            <button class="btn">Login</button>
+            <button class="btn">Submit</button>
         </form>
 
         <p>Don't have an account? <a href="#">Register</a> </p>
